--- a/styles.qss
+++ b/styles.qss
@@ -1,4 +1,3 @@
-
 QPushButton {
     background-color: #333333;
     color: white;
@@ -161,4 +160,13 @@ QLineEdit:focus, QTextEdit:focus, QPlainTextEdit:focus {
 QLabel {
     color: #333333;
     font-size: 14px;
+}
+
+/* Agregar estilos para el fondo de las ventanas */
+QMainWindow {
+    background-color: #f5f5f5;
+}
+
+QWidget {
+    background-color: #f5f5f5;
 }
